Few features added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="app_name">Wiggles</string>
     <string name="text_home">Home</string>
     <string name="text_details">Details</string>
+    <string name="adopt_screen">Adopt</string>
 </resources>
